Edited with TinaCMS

--- a/content/settings/config.json
+++ b/content/settings/config.json
@@ -30,7 +30,7 @@
   ],
   "search": [
     {
-      "name": "places",
+      "name": "Places",
       "route": "/places",
       "geosearch": true,
       "map": {
