--- a/content/settings/config.json
+++ b/content/settings/config.json
@@ -42,6 +42,12 @@
         "date_range_facet": "event_range_facet",
         "event_path": "2ff76f98-d562-4e00-9948-9980089d47fa"
       },
+      "visualizations": [
+        {
+          "name": "events_by_year",
+          "path": "2ff76f98-d562-4e00-9948-9980089d47fa"
+        }
+      ],
       "result_card": {
         "title": "name"
       },
